objects/LLC_BI__Online_Banking_Service__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Automated_Scheduling_Software__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automated Scheduling Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Communication_Setup__c</fullName>
        <label>Communication Setup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFTP (Preferred)</fullName>
                </value>
                <value>
                    <fullName>FRP (File Transfer Protocol) with PGP Encrytion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Customer_Overall_ACH_Limit__c</fullName>
        <label>Customer Overall ACH Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Date_of_Activation__c</fullName>
        <label>Date of Activation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debit_Limit__c</fullName>
        <label>Debit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Dual_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dual Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expiration_Date_Date_of_Next_Review__c</fullName>
        <label>Expiration Date/Date of Next Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__One_Time_Passcode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Time Passcode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Scheduling_Software_Description__c</fullName>
        <label>Scheduling Software Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Starting_Check_Number__c</fullName>
        <label>Starting Check Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Service Reference</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Online Banking Services</relationshipLabel>
        <relationshipName>Online_Banking_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Online Banking Service</label>
    <nameField>
        <displayFormat>O-{000000000}</displayFormat>
        <label>Online Banking Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online Banking Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>